...
    },
  ];

  return (
    <StyledContainerScroll
      showsVerticalScrollIndicator={false}
      testID="home-consumer-screen">
      <Header />
      <StyledBanner source={imgBanner}>
        <StyledTitleBanner>
          {t('text.screenHomeConsumer.titleBanner')}
        </StyledTitleBanner>
        <StyledSubtitleBanner>
...
