...
    </StyledContainerLargeButton>
  );

  return (
    <StyledContainer
      showsVerticalScrollIndicator={false}
      testID="home-producer-screen">
      <Header />
      <StyledTitle>{t('text.screenHomeProducer.titleSectionOne')}</StyledTitle>
      <StyledContainerAboutMyBasket>
        <StyledTitleAboutMyBasket>
          {t('text.screenHomeProducer.note')}
        </StyledTitleAboutMyBasket>
...
