...
      navigate('ConfirmRegister', registerData);
      setCanGoNext(false);
    }
  }, [isLoading, canGoNext, navigate, registerData]);

  return (
    <StyledContainer testID="register-screen">
      <StyledRowTitle>
        <StyledTitle>{t('text.screenRegister.createAnAccount')}</StyledTitle>
        <StyledSubtitle>
          {t('text.screenRegister.enterYourDetails')}
        </StyledSubtitle>
      </StyledRowTitle>
...
