...
        welcome={false}
      />
      <StyledContent>
        <ButtonRedirect title={t('button.myInfo')} onPress={() => null} />
        <ButtonRedirect title={t('button.myBaskets')} onPress={() => null} />

        {auth?.userType === 'consumer' &&
          basketConsumer?.basketProducerID.userID.phone && (
            <ButtonRedirect
              title={t('button.contactProducer')}
              onPress={() => WhatsAppLink()}
            />
          )}

        <StyledLogoutButton
          testID="logout-button"
          onPress={() => dispatch(LOGOUT())}>
          <StyledTitleLogoutButton>
            {t('button.logout')}
          </StyledTitleLogoutButton>

          <Icon name="logout" size={20} color={theme.colors.GRAY_900} />
...
