...
          'icon-tab-financial',
        )}
        {renderTab(
          'person',
          t('bottomTab.profile'),
          'ProfileProducer',
          'icon-tab-profile',
        )}
      </StyledButtonTabRow>
    </StyledBottonTabContainer>
  );
};

